--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 {% load static %}
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -59,6 +58,10 @@
     <br>
     <div class="container">
         {% block content %}
+        {% endblock %}
+    </div>
+    <div class="footer">
+        {% block footer %}
         {% endblock %}
     </div>
 </body>
