--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,25 @@
             }
         }
         }
+        /* Sticky footer styles
+        -------------------------------------------------- */
+        html {
+        position: relative;
+        min-height: 100%;
+        }
+        body {
+        /* Margin bottom by footer height */
+        margin-bottom: 60px;
+        }
+        .footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        /* Set the fixed height of the footer here */
+        height: 60px;
+        line-height: 60px; /* Vertically center the text there */
+        background-color: #f5f5f5;
+        }
     </style>
 
 </head>
@@ -44,13 +63,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">รายชื่อวิชาสอน</a>
+                    <a class="nav-link" href="{% url 'index' %}">รายชื่อวิชาสอน</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">รายงาน</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">จัดการข้อมูล</a>
+                    <a class="nav-link" href="{% url 'student_list' %}">จัดการข้อมูลนักเรียน</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'class_list' %}">จัดการข้อมูลวิชาเรียน</a>
                 </li>
             </ul>
         </div>
@@ -60,9 +82,13 @@
         {% block content %}
         {% endblock %}
     </div>
-    <div class="footer">
+    <footer class="footer">
+      <div class="container">
+        <span class="text-muted">
         {% block footer %}
         {% endblock %}
-    </div>
+        </span>
+      </div>
+    </footer>
 </body>
 </html>
