--- a/management/templates/class/class_list.html
+++ b/management/templates/class/class_list.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="container">
-        <h1>จัดการข้อมูลชั้นเรียน (Classroom)</h1>
+        <h1>จัดการข้อมูลชั้นเรียน (Classroom Management)</h1>
         <br/><br/>
-        <form class="form-inline" method="GET" action="{% url 'index' %}">
+        <form class="form-inline" method="GET" action="{% url 'class_list' %}">
             <div class="form-group">
-                <label for="inputSearch">ค้นหาชื่อรายวิชา:</label>
-                <input type="text" class="form-control ml-3" id="inputSearch" 
-                    name="inputSearch" placeholder="Search" value="{{search_txt}}">
+                <label for="search">ค้นหาชื่อรายวิชา:</label>
+                <input type="text" class="form-control ml-3" id="search" 
+                    name="search" placeholder="Search" value="{{search}}">
             </div>
             <button type="submit" class="btn btn-primary ml-3">Submit</button>
+            <a href="{% url 'class_add' %}"><button type="button" class="btn btn-secondary ml-3">Create New Classroom</button></a>
         </form>
         <br/><br/>
         <table class="table">
@@ -23,7 +24,7 @@
                     <th scope="col">เวลา</th>
                     <th scope="col">ห้อง</th>
                     <th scope="col">จำนวนนักเรียน</th>
-                    <th scope="col">ลบข้อมูล</th>
+                    <th scope="col">แก้ไข/ลบ</th>
                 </tr>
             </thead>
             <tbody>
@@ -37,8 +38,11 @@
                     <td>{{ cl.room.name }}</td>
                     <td>{{ cl.student_amount }}</td>
                     <td>
+                        <a href="{% url 'class_update' class_id=cl.id %}">
+                            <div class="btn btn-primary" id="{{cl.id}}">แก้ไข</div>
+                        </a>
                         <a href="{% url 'class_delete' class_id=cl.id %}">
-                            <div class="btn btn-warning" id="{{cl.id}}">ลบชั้นเรียน</div>
+                            <div class="btn btn-warning" id="{{cl.id}}">ลบ</div>
                         </a>
                     </td>
                 </tr>
